syntax = "proto3";

package readerService;

option go_package = "./;readerService";

import "feedback_reader_messages.proto";


service FeedbackReader {
  rpc GetFeedback(GetFeedbackByIdReq) returns (GetFeedbackByIdRes);
  rpc SearchFeedback(SearchReq) returns (SearchRes);
}