syntax = "proto3";


import "google/protobuf/timestamp.proto";


package readerService;

option go_package = "./;readerService";

message Feedback {
  string FeedbackID = 1;
  string FeedbackSource = 2;
  string Text = 3;
  repeated string Keywords = 4;
  string Sentiment = 5;
  google.protobuf.Timestamp FeedbackTimestamp = 6;
}

message CreateFeedbackReq {
  string FeedbackID = 1;
  string FeedbackSource = 2;
  string Text = 3;
  repeated string Keywords = 4;
  string Sentiment = 5;
  google.protobuf.Timestamp FeedbackTimestamp = 6;
}

message CreateFeedbackRes {
  string FeedbackID = 1;
}

message GetFeedbackByIdReq {
  string FeedbackID = 1;
}

message GetFeedbackByIdRes {
  Feedback Feedback = 1;
}